# Crypto_price_predictor

./: .gitignore  quix.yaml
docker-compose/: backfill_pipeline.yml  feature_pipeline.yml  redpanda.yml
real_time_ml_system_cohort_1/: README.md
services/features_dashboard/: Makefile  certfile  keyfile  pyproject.toml  setup_config.sh
services/features_dashboard/src/: backend.py  frontend.py  plot.py
services/kafka_to_feature_store/: Dockerfile  Makefile  app.yaml  historical.env  live.env  pyproject.toml  setup_historical_config.sh
services/kafka_to_feature_store/src/: config.py  hopsworks_api.py  main.py
services/price_predictor/: Makefile  app.yaml  pyproject.toml
services/price_predictor/notebooks/: training.ipynb
services/price_predictor/src/: api.py  baseline_model.py  config.py  predictor.py  training.py  utils.py
services/price_predictor/tools/: pyproject.toml
services/trade_producer/: Dockerfile  Makefile  app.yaml  historical.env  live.env  pyproject.toml  setup_historical_config.sh  setup_live_config.sh
services/trade_producer/src/: config.py  kraken_api.py  main.py
services/trade_producer/src/kraken_api/: pau_rest.py  pau_websocket.py  rest.py  websocket.py
services/trade_to_ohlc/: Dockerfile  Makefile  app.yaml  historical.env  live.env  pyproject.toml
services/trade_to_ohlc/src/: config.py  main.py
tools/: pyproject.toml
tools/src/: ohlc_data_reader.py
