[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Ramane23 <contactsouley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
streamlit = "^1.37.0"
hopsworks = "^3.7.0"
loguru = "^0.7.2"
pydantic-settings = "^2.4.0"
bokeh = "2.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
