[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Ramane23 <contactsouley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
comet-ml = "^3.44.4"
scikit-learn = "^1.5.1"
xgboost = "^2.1.1"
loguru = "^0.7.2"
lightgbm = "^4.5.0"
pandas = "^2.2.2"
matplotlib = "^3.9.1.post1"
pydantic = "^2.8.2"
flask = "^3.0.3"
gunicorn = "^23.0.0"
ta-lib="^0.4.28"




[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
