[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Ramane23 <contactsouley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
quixstreams = "^2.8.0"
websocket-client = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
